fixed alignment of the label to be aligned with the first row

--- a/packages/quantic/force-app/main/default/lwc/quanticSourceCitations/quanticSourceCitations.css
+++ b/packages/quantic/force-app/main/default/lwc/quanticSourceCitations/quanticSourceCitations.css
@@ -1,3 +1,7 @@
+.source__citations span {
+  height: 1.875rem;
+}
+
 .citation {
   max-width: 10.625rem;
 }
